tests/baselines/reference/symbolType20.errors.txt
tests/cases/conformance/es6/Symbols/symbolType20.ts(1,11): error TS2427: Interface name cannot be 'symbol'.


==== tests/cases/conformance/es6/Symbols/symbolType20.ts (1 errors) ====
    interface symbol { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'symbol'.